--- a/_quarto.yml
+++ b/_quarto.yml
@@ -55,8 +55,10 @@ website:
       # - href: w14/index.qmd
       #   text: "Week 14: Nov 30"
       - "---"
+      - href: "https://georgetown.zoom.us/j/92478089466?pwd=cSBmcjACL6EJJW0vHbzIqimH7imkVx.1"
+        text: "Zoom Link <i class='bi bi-box-arrow-up-right ps-1' style='font-size: 85%;'></i>"
       - href: "https://georgetown.hosted.panopto.com/Panopto/Pages/Sessions/List.aspx?folderID=98022271-76d6-457f-83ee-b1dd00143dbc"
-        text: "Recordings <i class='bi bi-box-arrow-up-right ps-1'></i>"
+        text: "Recordings <i class='bi bi-box-arrow-up-right ps-1' style='font-size: 85%;'></i>"
       - href: extra-videos/index.qmd
         text: "Extra Videos"
       - href: writeups/index.qmd
@@ -67,18 +69,20 @@ website:
       #   text: "Final Presentations"
       - "---"
       - href: "https://georgetown.instructure.com/courses/193275"
-        text: "S03 Canvas Page <i class='bi bi-box-arrow-up-right ps-1'></i>"
+        text: "S03 Canvas Page <i class='bi bi-box-arrow-up-right ps-1' style='font-size: 85%;'></i>"
       - href: "https://jjacobs.me/meet"
-        text: "Book Office Hours <i class='bi bi-box-arrow-up-right ps-1'></i>"
+        text: "Book Office Hours <i class='bi bi-box-arrow-up-right ps-1' style='font-size: 85%;'></i>"
       - href: "https://forms.gle/3CYWo8xHUxMvvowbA"
-        text: "Suggestion Box <i class='bi bi-box-arrow-up-right ps-1'></i>"
+        text: "Suggestion Box <i class='bi bi-box-arrow-up-right ps-1' style='font-size: 85%;'></i>"
       - href: "https://jjacobs.me/dsps"
-        text: "Textbook <i class='bi bi-box-arrow-up-right ps-1'></i>"
+        text: "Textbook <i class='bi bi-box-arrow-up-right ps-1' style='font-size: 85%;'></i>"
 
 format:
   html:
     theme: default
     css: "dsan-globals/jjstyles.css"
     toc: true
+    link-external-icon: true
+    link-external-newwindow: true
     include-in-header:
       text: "<script src='https://code.jquery.com/jquery-3.7.1.slim.min.js'></script><script src='/sidebar.js'></script>"
